--- a/Training/Training.Console/App.config
+++ b/Training/Training.Console/App.config
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<appSettings>
-		<add key="ConnectionString" value="Server=myServerAddress;Database=myDataBase;Trusted_Connection=True;"/>
-	</appSettings>
+	<configSections>
+		<section name="ApplicationSettings" type="System.Configuration.NameValueSectionHandler"/>
+		<section name="CarConfig" type="System.Configuration.NameValueSectionHandler"/>
+	</configSections>
+	<!--<appSettings>
+		<add key="ConnectionString" value="Whatever my connection string should say"/>
+	</appSettings>-->
+	<ApplicationSettings>
+		<add key="AuthorName" value="Seth Clossman" />
+		<add key="AuthorEmail" value="sclossman@skillstorm.com" />
+		<add key="TopSecretPasswordDoNotShare" value="abc123!" />
+	</ApplicationSettings>
+	<CarConfig>
+		<add key="Make" value="Honda" />
+		<add key="Model" value="Civic" />
+		<add key="Year" value="2014" />
+		<add key="Color" value="Black" />
+		<add key="BodyStyle" value="Sedan" />
+	</CarConfig>
 </configuration>
