End of Day 4 (will upload the comments/notes after dinner)

--- a/Training/Training.Console/Training.csproj
+++ b/Training/Training.Console/Training.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Training.Factories\Training.Factories.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
