Starting javascript and what i forgot to check in last week
Sorry this has taken so long

--- a/Training/Training.Console/Training.csproj
+++ b/Training/Training.Console/Training.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
@@ -19,8 +21,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="SSMotors.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SSMotors.xsd</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SSMotors.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SSMotors.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
 
